--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -1,14 +1,15 @@
-.header {
+.footer {
   background-color: #282c34;
-  min-height: 12vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-size: 25px;
+  color: white;
   text-align: center;
+  max-height: 5vh;
 }
 
-.title{
-  font-size: calc(10px + 2vmin);
-  color: white;
+.textFooter {
+  margin: 5px;
 }
