--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -1,14 +1,14 @@
-.header {
-  background-color: #282c34;
-  min-height: 12vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
+@import "../../../styles/settings.scss";
 
-.title{
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header {
+  @include flex(column, center, center);
+  height: 100vh;
+  position: relative;
+  text-align: center;
+
+  img {
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+  }
 }
