--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -3,6 +3,7 @@
 /* DO NOT USE THOSE VARIABLES IN THE OTHER SCSS FILES! */
 $black: #000000;
 $blue: #0000ff;
+$darkblue: #00008B;
 $chocolate: #5c3f1a;
 $cookie: #e89e3b;
 $darkGray: #363636;
