--- a/src/components/features/Posters/Posters.module.scss
+++ b/src/components/features/Posters/Posters.module.scss
@@ -4,8 +4,7 @@
 
 .postersGallery {
   width: 50%;
-  display: flex;
-  justify-content: center;
+  @include flex(row, center, center);
 }
 
 .postersGallery .poster {
@@ -20,26 +19,20 @@
 
 .poster {
   width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex(row, center, center);
 }
 
 @media (max-width: 991px){
   .postersGallery {
     width: 75%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include flex(column, center, center);
   }
 }
 
 @media (max-width: 480px){
   .postersGallery {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-   align-items: center;
+    @include flex(column, center, center);
   }
 }
 
@@ -81,9 +74,7 @@
   position: fixed;
   top: 20px;
   right: 50px;
-  width: 2rem;
-  height: 2rem;
-  padding: 5px;
+  padding: 2px;
   background-color: rgba(0, 0, 0, 0.4);
   color: $white;
   cursor: pointer;
