--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -37,3 +37,10 @@ $text-color: $black;
 /*Header*/
 
 /*Splash*/
+
+/*Posters*/
+
+$first-shadow-poster-color: $black;
+$second-shadow-poster-color: $darkblue;
+
+$icon-color: $white;
