--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -34,6 +34,10 @@ $box-shadow-small: 0px 0px 25px 10px rgba(0, 0, 0, 0.1);
 
 $text-color: $black;
 
+/*Global*/
+$text-font: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+$padding-below-sections: 75px;
+
 /*Header*/
 
 /*Splash*/
@@ -46,4 +50,3 @@ $first-shadow-poster-color: $black;
 $second-shadow-poster-color: $darkblue;
 
 $icon-color: $white;
-
