--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -3,7 +3,7 @@
 /* DO NOT USE THOSE VARIABLES IN THE OTHER SCSS FILES! */
 $black: #000000;
 $blue: #0000ff;
-$darkblue: #00008B;
+$darkblue: #00008b;
 $chocolate: #5c3f1a;
 $cookie: #e89e3b;
 $darkGray: #363636;
@@ -37,6 +37,10 @@ $text-color: $black;
 /*Global*/
 $text-font: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 $padding-below-sections: 75px;
+
+/*Links*/
+$linkColor: $darkblue;
+$linkColor-active: $lightGreyBlue;
 
 /*Header*/
 
