--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -37,6 +37,7 @@ $text-color: $black;
 /*Global*/
 $text-font: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 $padding-below-sections: 75px;
+$bottom-color-below-title: $darkblue;
 
 /*Links*/
 $linkColor: $darkblue;
