--- a/src/components/views/MainPage/MainPage.module.scss
+++ b/src/components/views/MainPage/MainPage.module.scss
@@ -5,15 +5,12 @@
   flex-direction: column;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
   color: $text-color;
   padding: 0 auto;
-  // margin: 15px 200px 15px 200px;
-  // border: 1px solid red;
   background: $white;
-  width: 67vw;
-
-  // input {
-  //   border: solid 1px blue;
-  //
-  // }
+  width: 60vw;
+  border-radius: 10px;
+  box-shadow: 0px 0px 1px $first-shadow-poster-color, 0 0 5px $second-shadow-poster-color, 0 0 2px $first-shadow-poster-color;
 }
