change styles for titles bottom

--- a/src/components/common/AboutProgram/AboutProgram.module.scss
+++ b/src/components/common/AboutProgram/AboutProgram.module.scss
@@ -9,7 +9,9 @@
   padding: 10px;
   font-family: $text-font;
   margin: 0 25px 0 25px;
-  border-bottom: 1px solid $bottom-color-below-title;
+  border-bottom: 3px solid $bottom-color-below-title;
+  // border: chocolate 1px solid;
+  width: 25%;
 }
 
 .aboutProgram {
