--- a/src/components/common/ProgramDepartments/ProgramDepartments.module.scss
+++ b/src/components/common/ProgramDepartments/ProgramDepartments.module.scss
@@ -11,7 +11,8 @@
   padding: 10px;
   margin: 0 25px 0 25px;
   font-family: $text-font;
-  border-bottom: 1px solid $bottom-color-below-title;
+  border-bottom: 3px solid $bottom-color-below-title;
+  width: 25%;
 }
 
 .department {
