--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -46,6 +46,9 @@ $linkColor-active: $lightGreyBlue;
 /*Header*/
 
 /*Splash*/
+$splash-overlay: rgba(0, 0, 0, 0.2);
+$programName-color: $darkWhite;
+$programName-shadow: 2px 2px 2px $black;
 
 /*Menu*/
 $menu-bg: $darkWhite;
