--- a/src/components/common/ProgramName/ProgramName.module.scss
+++ b/src/components/common/ProgramName/ProgramName.module.scss
@@ -1,20 +1,18 @@
-@import '../../../styles/global.scss';
+@import "../../../styles/settings.scss";
 
 .root {
   @include flex(column, center, start);
-  height: 45vh;
-  padding: 25px 0 25px 0;
-}
-
-.programName {
-  font-size: 50px;
-  text-transform: uppercase;
-}
-
-.podprogramName {
-  font-size: 40px;
-}
-
-.programName .podprogramName {
+  color: $programName-color;
   font-family: $text-font;
+  padding: 25px 0 25px 0;
+  text-shadow: $programName-shadow;
+  width: 90%;
+
+  .programName {
+    font-size: 4rem;
+    text-transform: uppercase;
+  }
+  .podprogramName {
+    font-size: 3rem;
+  }
 }
