--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -22,6 +22,7 @@ $red: #cc0033;
 $transparent: transparent;
 $white: #ffffff;
 $yellow: #ffff00;
+$gold: #f8af20;
 
 $base-padding: 24px;
 $radius: 5px;
@@ -37,10 +38,10 @@ $text-color: $black;
 /*Global*/
 $text-font: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 $padding-below-sections: 75px;
-$bottom-color-below-title: $darkblue;
+$bottom-color-below-title: $gold;
 
 /*Links*/
-$linkColor: $darkblue;
+$linkColor: $black;
 $linkColor-active: $lightGreyBlue;
 
 /*Header*/
