--- a/src/components/common/AboutUs/AboutUs.module.scss
+++ b/src/components/common/AboutUs/AboutUs.module.scss
@@ -1,24 +1,36 @@
 @import "../../../styles/settings.scss";
 
-.root {
-  display: flex;
-  flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  color: $text-color;
-  padding: 0 auto;
-  background: $white;
-  width: 55vw;
-  border-radius: 10px;
-  box-shadow: 0px 0px 1px white, 0 0 5px black, 0 0 2px grey;
+.aboutUsTitle {
+  font-size: 25px;
+  padding: 10px;
+  font-family: $text-font;
+  margin: 0 25px 0 25px;
+  border-bottom: 3px solid $bottom-color-below-title;
+  width: 30%;
 }
 
-.MainViewSection {
-  width: 100%;
-  padding-bottom: $padding-below-sections;
-  padding-top: 15px;
+.aboutUsDesc1  {
+  font-size: 15px;
+  padding: 10px;
+  font-family: $text-font;
+  text-indent: 50px;
+  text-align: justify;
+  line-height: 1.5;
+  margin-right: 25px;
+}
+
+.asd {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.colLogo {
+  margin: 15px;
+}
+
+img {
+  width: 230px;
 }
 
 /* ExtraExtraLarge Devices, UltraWide Desktops  */
@@ -41,20 +53,33 @@
 /* Medium Devices, Tablets iPad */
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .root {
-    width: 90vw;
   }
 }
 
 /* Small Devices, Small tablets Large Phones */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-  .root {
-    width: 90vw;
+  .asd {
+    display: flex;
+    flex-direction: column;
+    // width: 100%;
+  }
+
+  .aboutUsDesc1  {
+    margin: 0 25px 0 25px;
   }
 }
 
 /* Extra Small Devices, Phones */
 @media only screen and (min-width: 0px) and (max-width: 479px) {
+  .asd {
+    display: flex;
+    flex-direction: column;
+    // width: 100%;
+  }
 
+  .aboutUsDesc1  {
+    margin: 0 25px 0 25px;
+  }
 }
 
 /* Media pointer*/
