add text for about program and change tex in about us

--- a/src/components/common/AboutProgram/AboutProgram.module.scss
+++ b/src/components/common/AboutProgram/AboutProgram.module.scss
@@ -18,3 +18,22 @@
   line-height: 1.5;
   margin: 0 25px 0 25px;
 }
+
+.aboutProgram1 {
+  font-size: 15px;
+  padding: 10px;
+  font-family: $text-font;
+  font-weight: bold;
+  line-height: 1.5;
+  margin: 0 25px 0 25px;
+}
+
+.aboutProgram2 {
+  font-size: 18px;
+  padding: 10px;
+  font-family: $text-font;
+  text-align: center;
+  font-weight: bold;
+  line-height: 1.5;
+  margin: 0 25px 0 25px;
+}
