--- a/src/components/common/AboutUs/AboutUs.module.scss
+++ b/src/components/common/AboutUs/AboutUs.module.scss
@@ -4,7 +4,7 @@
   font-size: 25px;
   padding: 10px;
   font-family: $text-font;
-  margin: 0 25px 0 25px;
+  margin: 0 25px 10px 25px;
   border-bottom: 3px solid $bottom-color-below-title;
   width: 30%;
 }
