--- a/src/components/views/MainPage/MainPage.module.scss
+++ b/src/components/views/MainPage/MainPage.module.scss
@@ -24,6 +24,7 @@
 /* ExtraExtraLarge Devices, UltraWide Desktops  */
 @media (min-width: 1921px) {
   .root {
+    width: 27vw;
   }
 }
 
@@ -54,7 +55,9 @@
 
 /* Extra Small Devices, Phones */
 @media only screen and (min-width: 0px) and (max-width: 479px) {
-
+  .root {
+    width: 90vw;
+  }
 }
 
 /* Media pointer*/
