--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -36,8 +36,8 @@ $box-shadow-small: 0px 0px 25px 10px rgba(0, 0, 0, 0.1);
 $text-color: $black;
 
 /*Global*/
-$font-title: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-$font-text: sans-serif;
+$font-title: "Ubuntu", sans-serif;
+$font-text: "Lato", sans-serif;
 $padding-below-sections: 75px;
 $bottom-color-below-title: $gold;
 
