--- a/src/components/views/MainPage/MainPage.module.scss
+++ b/src/components/views/MainPage/MainPage.module.scss
@@ -1,18 +1,17 @@
 @import "../../../styles/settings.scss";
 
 .root {
+  background: $white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 1px white, 0 0 5px black, 0 0 2px grey;
+  color: $text-color;
   display: flex;
   flex-direction: column;
+  margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
-  margin-bottom: 20px;
-  color: $text-color;
   padding: 0 auto;
-  background: $white;
-  width: 55vw;
-  border-radius: 10px;
-  box-shadow: 0px 0px 1px white, 0 0 5px black, 0 0 2px grey;
 }
 
 .MainViewSection {
@@ -24,39 +23,42 @@
 /* ExtraExtraLarge Devices, UltraWide Desktops  */
 @media (min-width: 1921px) {
   .root {
-    width: 27vw;
+    width: 55vw;
+    max-width: 1200px;
   }
 }
 
 /* ExtraLarge Devices, Desktops  */
 @media (min-width: 1200px) and (max-width: 1920px) {
   .root {
+    width: 70%;
   }
 }
 /* Large Devices, Laptops, Large Tablets iPad Pro */
 @media only screen and (min-width: 1024px) and (max-width: 1199px) {
   .root {
+    width: 70%;
   }
 }
 
 /* Medium Devices, Tablets iPad */
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .root {
-    width: 90vw;
+    width: 90%;
   }
 }
 
 /* Small Devices, Small tablets Large Phones */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   .root {
-    width: 90vw;
+    width: 90%;
   }
 }
 
 /* Extra Small Devices, Phones */
 @media only screen and (min-width: 0px) and (max-width: 479px) {
   .root {
-    width: 90vw;
+    width: 90%;
   }
 }
 
