--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,5 +1,9 @@
 @import "./settings.scss";
 
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Ubuntu&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Ubuntu&display=swap");
+
 h1,
 h2,
 h3,
@@ -7,8 +11,8 @@ h4,
 h5,
 h6 {
   font-family: $font-title;
-  margin: 0;
 }
 p {
   font-family: $font-text;
+  font-size: 1.15rem;
 }
